# Django-Medication-Tracker-API

./: README.md  manage.py  pyproject.toml  requirements.txt
medication_tracker/: asgi.py  settings.py  urls.py  wsgi.py
medications/: admin.py  models.py  serializers.py  urls.py  views.py
medications/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
