[tool.poetry]
name = "medication tracker"
version = "1.0.0"
description = "A back-end API for users to track and manage their medications."
authors = ["Manuel De La Rosa <manueldelarosa9722@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.2.4,<4.3.0"
djangorestframework = ">=3.14.0,<3.15.0"
pytest-django = ">=4.5.2,<4.6.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "medication_tracker.settings"
python_files = "test_*.py"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
